reparare exceptii sdk evaluare